{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 60,
  "lineage": "1d7e4db1-0f53-063a-78dc-e99c56455fd3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hello-terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052eaddc8881bf2ec",
            "arn": "arn:aws:ec2:eu-central-1:622133505890:instance/i-0c9cdeb9afd2e2a09",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c9cdeb9afd2e2a09",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "Tp-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07670c510d1f72348",
            "private_dns": "ip-172-31-5-105.eu-central-1.compute.internal",
            "private_ip": "172.31.5.105",
            "public_dns": "ec2-18-157-187-13.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.157.187.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-070201f7dd2c46a30",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "hello-terra-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-caed3e86",
            "tags": {
              "Batch": "5AM",
              "Name": "Terraform-Pipeline"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0618762b6bcd21eef"
            ]
          },
          "dependencies": [
            "aws_security_group.hello-terra-ssh",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:622133505890:internet-gateway/igw-0ffe52f734a00c95a",
            "id": "igw-0ffe52f734a00c95a",
            "owner_id": "622133505890",
            "tags": {
              "Name": "main_vpc"
            },
            "vpc_id": "vpc-0be476ed68b735848"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-076b2b8fc90ba09e4",
            "owner_id": "622133505890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ffe52f734a00c95a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main_vpc"
            },
            "vpc_id": "vpc-0be476ed68b735848"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hello-terra-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:622133505890:security-group/sg-0618762b6bcd21eef",
            "description": "Allow ssh and http traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0618762b6bcd21eef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hello-terra-ssh",
            "name_prefix": "",
            "owner_id": "622133505890",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-be2d83d4"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "submet_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:622133505890:subnet/subnet-0fc6cc4e5b1d4b287",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0fc6cc4e5b1d4b287",
            "map_public_ip_on_launch": false,
            "owner_id": "622133505890",
            "vpc_id": "vpc-0be476ed68b735848"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:622133505890:vpc/vpc-0be476ed68b735848",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0d535c5106bdc301b",
            "default_route_table_id": "rtb-08bf0c94851daf6bf",
            "default_security_group_id": "sg-04ed1ca058ee2e3a3",
            "dhcp_options_id": "dopt-a014baca",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0be476ed68b735848",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08bf0c94851daf6bf",
            "owner_id": "622133505890"
          }
        }
      ]
    }
  ]
}